# Pierrot

./: .gitignore  README.md  fuzzy.py  main.py  pierrot.py  prototipo.py  pyproject.toml  requirements.txt  test_analizer.py
.env/: pyvenv.cfg
.pierrot_venv/: pyvenv.cfg
database/: deck.json
docs/: bibliografia.txt  planificacion.drawio
logic/: __init__.py  analyzer.py  fuzzy.py
src/: classes.py  functions.py
src/Pierrot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
tests/: test_analizer.py
