[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pierrot"
version = "0.1"
authors = [
    {name="David Rodríguez Dagas"},
    {name="Adrián Pérez Domńiguez"}
]
dependencies = [
    "scikit-fuzzy==0.4.2",
    "scipy>=1.16.2",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pytest>=8.4.2",
    "disutils"
]
requires-python = ">= 3.11"


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
